--- a/data/css/zavatar.scss
+++ b/data/css/zavatar.scss
@@ -50,7 +50,7 @@ html{
 body{
 	margin: auto;
 	width: 740px;
-	background-image: url("/img/bg.main.png");
+	background-image: url("/img/bg.main.gif");
 	#head, #foot{
 		display: block;
 		height: 213px; width: 740px;
